# cat-weather-new

./: .gitattributes  .gitignore  .gitmodules  ASSETS_SENDPHOTO.md  AUDIT_ASSETS_DEBUG_SUMMARY.md  AUDIT_ASSETS_IMPLEMENTATION.md  BACKFILL_WAVES_FIX_SUMMARY.md  CAPTION_FIX_SUMMARY.md  CHANGELOG.md  CHANGES_SEA_SCORING_TUNING.md  CI_SANITY_CHECK_SUMMARY.md  Makefile  README.md  SEASON_WINDOW_IMPLEMENTATION.md  SEA_CAPTION_DAYPART_IMPLEMENTATION.md  SEA_CAPTION_PROMPT_GPT4O_PATCH.md  SEA_REMAINDER_REPORT_FIX.md  SEA_SELECTION_REWORK_SUMMARY.md  SOLUTION_SUMMARY.md  VERBOSE_LOGGING_BACKFILL_WAVES.md  VISION_METRICS_PARSING_SUMMARY.md  WAVE_CONSISTENCY_SUMMARY.md  WAVE_DATA_CONSISTENCY_ANALYSIS.md  WAVE_SCORING_FIX_SUMMARY.md  architectural_overview.md  caption_gen.py  data_access.py  db_utils.py  dev-requirements.txt  flowers_patterns.py  flowers_weather.py  geo_context.py  imgio.py  ingestion.py  jobs.py  main.py  observability.py  openai_client.py  osm_utils.py  postcard_export.py  (+12 more)
.cto/: runner.yaml
.github/workflows/: auto-merge.yml  cat-weather-deploy.yml  ci.yml  e2e.yml  openapi-guard.yml  prepare_models.yml
api/: openapi.yaml  pairing.py  rate_limit.py  security.py  uploads.py
api/docs/: index.html
asset_selectors/: postcard.py
data/flowers/: colors.yaml  flowers.yaml  holidays.yaml  micro_engagement.yaml  patterns.yaml  season.yaml  traditions.yaml  weather.yaml  wisdom.yaml
docs/: contract-tests-investigation.md  flowers.md  models.lock.sample.json  sea_scoring_integration_summary.md  weather.md
docs/ops/: rubrics-schedule-audit.md  rubrics_pending_jobs.json
facts/: baltic_facts.md  loader.py  new_year_traditions.md
jobs/: publish_rubric.py  vision.py
metadata/: extractor.py
migrations/: 0006_amber.sql  0007_photo_rubrics.sql  0008_rubric_scheduler.sql  0008_vision_enhancements.sql  0009_token_usage.sql  0010_migrate_assets.sql  0010_weather_job_backfill.py  0011_asset_normalization.sql  0012_core_schema.sql  0013_migrate_legacy_assets.py  0014_split_asset_channels.sql  0015_recognition_channel_null.sql  0016_default_rubrics.py  0017_device_pairing.sql  0017_weather_day_enhancements.py  0018_uploader_init.py  0019_device_secret.py  0020_assets_uploads.py  0020_assets_uploads.sql  0021_mobile_sources.py  0022_uploads_gps_redacted.py  0023_sea_assets_shot.sql  0023_sea_conditions.py  0024_sea_assets_shot.py  0025_baltic_facts.sql  0026_enrich_sea_metadata.sql  0026_sea_conditions_wind_columns.py  0027_add_wave_sky_metrics.py  0027_assets_photo_metadata.py  0028_assets_capture_fields.py  0029_assets_postcard_score.py  0030_postcard_score_scale.sql  0031_postcard_reset_last_used.sql  0032_postcard_restore_unused_scores.py
overlays/: README.md
prometheus_client/: __init__.py
scripts/: __init__.py  e2e_attach_upload.py  export_high_score_postcards.py
selectors/: __init__.py
tests/: conftest.py  test_amber.py  test_app.py  test_asset_migration.py  test_assets_sendphoto.py  test_audit_assets.py  test_audit_assets_enhanced_errors.py  test_backfill_wave_metrics.py  test_backfill_waves_command.py  test_backfill_waves_errors.py  test_baltic_facts.py  test_calm_seas_guard_rules.py  test_data_access_capture_fields.py  test_data_access_rubric_jobs.py  test_device_uploads.py  test_devices_api.py  test_e2e.py  test_flowers_engine.py  test_geo_context.py  test_health.py  test_hmac_security.py  test_ingestion_caption_coords.py  test_ingestion_helper_consistency.py  test_ingestion_shot_fields.py  test_manual_schedule.py  test_metadata_extractor.py  test_migrations_smoke.py  test_new_year_rubric.py  test_observability.py  test_ocr_payload.py  test_openai_client.py  test_osm_utils.py  test_pairing_tokens.py  test_postcard_caption.py  test_postcard_export_command.py  test_postcard_publish.py  test_postcard_restore.py  test_postcard_selector.py  test_postcard_watermark.py  test_prod_vs_test_channel.py  (+39 more)
tests/contract/: conftest.py  test_openapi_contract.py
tests/fixtures/: __init__.py  ingestion_utils.py  sea.py  seed_devices_uploads.py
tests/metadata/: test_exifread_printable_ascii.py  test_piexif_full_image_retry.py
tools/: __init__.py  e2e.py  gen_models_lock.py
viewer/: __init__.py  models.py  progress_store.py  repository.py
