[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cat-weather-new"
version = "1.0.0"
description = "Telegram scheduler bot with weather and asset ingestion"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.5",
    "httpx>=0.27.0",
    "Pillow>=10.4.0",
    "piexif>=1.1.3",
    "exifread>=3.0.0",
    "pillow-heif>=0.16",
    "psutil>=5.9.8",
    "prometheus_client>=0.20.0",
    "qrcode[pil]>=7.4.2",
    "requests>=2.32.3",
    "schemathesis>=3.27.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise from within except
    "UP007", # use X | Y for type union (Optional is fine)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["B011", "F401", "F811"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "e2e: marks tests that exercise the full staging pipeline and require external services",
    "integration: marks tests requiring network or external credentials",
    "asyncio: run test in event loop",
]
# Skip e2e and integration tests by default
addopts = "-m 'not e2e and not integration' -v"
